Slides grupo de teses. Rascunho variáveis Felipe.

--- a/Articles/VECM/Conclusion.org
+++ b/Articles/VECM/Conclusion.org
@@ -10,6 +10,11 @@ Our results are:
 Our estimations does not show residuals serial autocorrelation nor heteroscedasticity.
 Additionally, the results are not sensible to lag order specification and most expected results remain valid in a economically relevant time horizon.
 
+In summary, our results contributes to a better understanding on the financial determinants of residential investment.
+The proposed index clarify the connection between asset price inflation (in this case house prices) and aggregate demand through residential investment, extending textcite:petrini_2021_TD and textcite:teixeira_crescimento_2015 works to an empirical direction.
+From a policy making perspective, our findings highlight the relevance to go beyond LTV cap recommendations and analyse how house prices, credit grant, residential investment e economic performance are related.
+In other words, macroeconomic models that does not explicitly include residential investment and its determinants may capture just one part of the story.
+
 This paper is just a step towards an broad and emerging macroeconomic housing agenda.
-A better comprehension of the connection between housing financial system and mortgage market institutional particularities could enlighten this discussion.
-Further studies could also evaluate whether or not houses own-rate of interest validity is restricted to the US.
+Further studies could evaluate whether or not houses own-rate of interest validity is restricted to the US economy.
+A better comprehension of the connection between housing financial system and mortgage market institutional particularities could also enlighten this discussion.
