--- a/Articles/VECM/VECM.org
+++ b/Articles/VECM/VECM.org
@@ -4080,14 +4080,14 @@ own =  \left(\frac{1+r_{mo}}{1+\pi} - 1\right)
 Equation ref:txpropria represents this particular real interest rate which is the combination of the relevant nominal rate of interest with the relevant price index for the one acquiring a new house.
 It is the real cost in houses from buying houses  \cite[p.~53]{teixeira_crescimento_2015}.
 The lower the houses own-rate of interest, the greater the rate of growth of residential investment ($g_{I_{h}}$, see Figure ref:propria_investo).
+
 We do not assume that houses own-rate of interest is the only determinant of residential investment.
 While they share a negative correlation in the short run, there are long term determinants of residential investment such as demographic factors, urbanization, credit policy, among others.
+Besides the sensitivity on housing bubbles, we do not argue that this index is only relevant for those who build a house expecting capital gain[fn:: During a housing bubble period (/e.g./ 2002-5 in the US), it is house price inflation that govern houses own rate of interest movements. So, the lowe this rate is, the greater the capital gains (in house) for speculating with houses will be.].
+The relevance of this variable is household-wide since most of them benefits from a house price increase[fn:: There may are some splillover effects that will influence other housing related-variables (such as rents). However, those consequences go beyond the definition of residential investment and, thus, are out of the scope of this paper.].
+For example, house appreciation has a positive effect on house owners' creditworthness since their collateral increase as well.
+Thus, houses own-rate of interest relevanc is not restricted to speculative-led demand for new houses.
 
-# Based on this discussion we assume that residential investment has a long term trend associate do demographic factors, urbanization and credit policy, while, in the short run, it shows a negative relation with houses own-rate of interest
-# Additionally, the latter parameter also include the residential investment demand arising from expectations of capital gains resulting from speculation with the existing houses stock.
-# During a housing bubble period (/e.g./ 2002-5 in the US), it is house price inflation that governs houses own-rate of interest.
-# So, the lower this rate is, the greater the capital gains (in house) for speculating with house will be.
-# However, this not imply that all demand for houses during this period will be determined only by speculative purposes.
 
 #+begin_export latex
 \begin{figure}[htb]
